--- a/todo_notes/requirements.txt
+++ b/todo_notes/requirements.txt
@@ -1,18 +1,54 @@
 asgiref==3.8.1
+attrs==23.2.0
 black==24.3.0
+cachetools==4.2.4
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 Django==5.0.3
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+docker==5.0.3
+google-api-core==1.34.1
+google-auth==1.35.0
+google-cloud-aiplatform==1.1.1
+google-cloud-bigquery==2.6.1
+google-cloud-core==1.7.3
+google-cloud-storage==1.44.0
+google-crc32c==1.5.0
+google-resumable-media==1.3.3
+googleapis-common-protos==1.63.0
+grpcio==1.36.1
+grpcio-status==1.36.1
+idna==3.7
+ipython-genutils==0.2.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_core==5.7.2
 mypy-extensions==1.0.0
+nbformat==5.1.3
+nmp==3
 packaging==24.0
 pathspec==0.12.1
 platformdirs==4.2.0
+proto-plus==1.23.0
+protobuf==3.20.3
 psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
 pytz==2024.1
+referencing==0.35.0
+requests==2.31.0
+rpds-py==0.18.0
+rsa==4.9
+six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
+traitlets==5.14.3
 typing_extensions==4.10.0
+urllib3==2.2.1
+vaip==3.1
+websocket-client==1.8.0
